* Fixed help layout issue (content area scroll bar not all the way to the   right of the screen). Issue #: 10766
svn path=/trunk/; revision=33800


Former-commit-id: 4289f9b1b237a427e98411d55885a81a9727592c

--- a/v3/admingui/common/src/main/resources/help/help.css
+++ b/v3/admingui/common/src/main/resources/help/help.css
@@ -36,15 +36,21 @@
 
 .helpMenuBox {
     position: fixed;
-    width: 315px;
+    width: 320px;
     float: left;
     height: 100%;
     overflow: auto;
     border-right: 3px ridge #666;
+    z-index: 100; 
 }
 .helpContentBox {
     position: fixed;
-    left: 320px;
     height: 100%;
+    width: 100%;
     overflow: auto;
+    z-index: 50; 
+}
+
+.helpContentBox #helpContent {
+    margin-left: 326px;
 }
